Fixed some responsive issues with the articles

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ section {
   color: #B2C1B2;
   text-align: center;
   margin: auto;
-  width: 25%;
+  width: 100%;
   justify-content: center;
 }
 @media (min-width: 768px) {
@@ -63,10 +63,14 @@ section .responsive-image {
   }
 }
 section .secondary-articles {
-  display: flex;
-  flex-direction: row;
   margin: 20px;
   justify-content: center;
+}
+@media (min-width: 768px) {
+  section .secondary-articles {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
