--- a/css/base/_foundation.scss
+++ b/css/base/_foundation.scss
@@ -11,7 +11,7 @@ section {
     color: #B2C1B2;
     text-align: center;
     margin: auto;
-    width: 25%;
+    width: 100%;
     justify-content: center;
     @include breakpoint(sm) {
         font-size: 1.5rem;
@@ -41,9 +41,12 @@ section {
         }
 }
     .secondary-articles {
-        display: flex;
-        flex-direction: row;
+        //flex-direction: column;
         margin: 20px;
         justify-content: center;
+        @include breakpoint(sm){
+            display: flex;
+            flex-direction: row;
+        }
     }
 }
